--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -1,9 +1,10 @@
-Django==2.1.4
-gunicorn==19.9.0
-whitenoise==4.1.2
 Babel==2.6.0
 dj-database-url==0.5.0
+Django==2.1.4
+django-heroku==0.3.1
 django-phonenumber-field==2.1.0
+gunicorn==19.9.0
 phonenumbers==8.10.2
+psycopg2==2.7.6.1
 pytz==2018.7
-psycopg2==2.7.2
+whitenoise==4.1.2
