--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -4,7 +4,9 @@ Django==2.1.4
 django-heroku==0.3.1
 django-phonenumber-field==2.1.0
 gunicorn==19.9.0
+markovify==0.7.1
 phonenumbers==8.10.2
 psycopg2==2.7.6.1
 pytz==2018.7
+Unidecode==1.0.23
 whitenoise==4.1.2
