--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -1,12 +1,13 @@
-Babel==2.6.0
+Babel==2.7.0
 dj-database-url==0.5.0
-Django==2.1.7
+Django==2.2.4
 django-heroku==0.3.1
-django-phonenumber-field==2.1.0
+django-phonenumber-field==3.0.1
 gunicorn==19.9.0
-markovify==0.7.1
-phonenumbers==8.10.2
-psycopg2==2.7.6.1
-pytz==2018.7
-Unidecode==1.0.23
-whitenoise==4.1.2
+markovify==0.7.2
+phonenumbers==8.10.16
+psycopg2==2.8.3
+pytz==2019.2
+sqlparse==0.3.0
+Unidecode==1.1.1
+whitenoise==4.1.3
